# CppJavaCommJni

./: README.md  build.sh  cleanup.sh  notes.txt  run.sh
cpp/: .cproject  CMakeLists.txt  build.sh  run.sh
cpp/src/: JavaComm.h  JavaCommTest.h  Jvm.h  global.h  main.cpp
cppLib/: .cproject  .gitignore  .project  CMakeLists.txt  cleanup.sh
cppLib/src/: HelloJNI.h  javaCommReceive.cpp
java/: .gitignore  build.sh  cleanup.sh  getSignatures.sh
java/src/javaComm/: Listener.java  Sender.java
